# anime_list

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: docker-image.yml
backend/: .env  Dockerfile  alembic.ini  docker-compose-test.yml  pyproject.toml  requirements.txt
backend/migrations/versions/: 237b849042ca_change_anime_name_unique_constraint.py  adeb6758c48c_.py
backend/scripts/: prestart.sh
backend/src/: backend_prestart.py  base.py  config.py  database.py  initial_data.py  main.py  security.py  utils.py
backend/src/anime/: models.py  router.py  schemas.py  service.py  utils.py
backend/src/api/: __init__.py
backend/src/auth/: deps.py  models.py  router.py  schemas.py  service.py
backend/src/email-templates/src/: new_account.mjml  reset_password.mjml  reset_password_success.mjml
backend/src/migrations/: env.py
backend/src/migrations/versions/: 0e781517daa1_.py  454461072839_create_user.py  6d05744e5287_change_username_to_email.py  7e92c96e17ad_.py  a67908e330fa_add_email_field_to_users.py  c43929553475_add_plan_to_watch_state_to_anime.py  de2431c3b7b0_.py
backend/src/tests/: conftest.py  locustfile.py  test_anime.py  test_auth.py
backend/src/tests/api/: test_anime.py  test_auth.py
backend/src/tests/utils/: anime.py  auth.py  utils.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.tsx  utils.ts
migrations/: env.py
migrations/versions/: de2431c3b7b0_.py  (+1 more)
src/: base.py  config.py  database.py  main.py  models.py  security.py
src/anime/: models.py  (+4 more)
(+51 files in other folders)
